--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
 
 body {
     margin: 0;
-    background: #f3f4f6;
+    background: #cff1a8b4;
     font-family: "Roboto", sans-serif;
     color: #1f2937;
     line-height: 1.7;
@@ -78,7 +78,7 @@ body {
 -------------------------------------------------- */
 
 .resume-header {
-    background: #811b85;
+    background: #2c5200;
     color: white;
     padding-bottom: 10px;
     height: 230px;
@@ -111,7 +111,7 @@ body {
 
 
 .resume-header .text-link:hover {
-    color: #f8baf8 ;
+    color: #bbee81 ;
     text-decoration: underline;
 }
 
@@ -136,7 +136,7 @@ h1 {
 h2 {
     font-size: 1.50rem;
     font-weight: 600;
-    color: #811b85;
+    color: #2c5200;
     /* AJUSTE MANTIDO: Remove margin-left para alinhar HR */
     padding-left: 25px;
     margin-bottom: 1%;
@@ -174,7 +174,7 @@ h4 {
 .hr-destaque {
     border: none;
     height: 2px;
-    background-color: #811b85;
+    background-color: #2c5200;
     width: 90%;
     /* MANTIDO: O margin-left de 45px do HR principal dita o ponto de alinhamento */
     margin: 10px 0 20px 45px; 
@@ -203,9 +203,9 @@ h4 {
 }
 
 .btn:hover {
-    background: #f0d1ff;
+    background: #73b12d;
     transform: translateY(-3px);
-    box-shadow: 0 8px 20px rgba(180, 115, 240, 0.4);
+    box-shadow: 0 8px 20px #2c52007c;
 }
 
 /* --------------------------------------------------
@@ -228,7 +228,7 @@ h4 {
 -------------------------------------------------- */
 
 .resume-timeline {
-    border-left: 3px solid #8349e0;
+    border-left: 3px solid #2c5200;
     padding-left: 35px;
     position: relative;
     list-style: none;
@@ -248,7 +248,7 @@ h4 {
     position: absolute;
     left: -44px;
     top: 5px;
-    border: 5px solid #a632d4;
+    border: 5px solid #2c52007c;
     background-color: #ffffff;
 }
 
@@ -266,7 +266,7 @@ h4 {
 -------------------------------------------------- */
 
 .badge {
-    background: #7d5d85;
+    background: #54792a;
     padding: 5px 14px;
     border-radius: 8px;
     color: #fff;
@@ -274,7 +274,7 @@ h4 {
     font-weight: 600;
     display: inline-block;
     margin: 5px 6px;
-    box-shadow: 0 3px 10px rgba(180, 82, 236, 0.3);
+    box-shadow: 0 3px 10px #244200;
     transition: 0.2s;
 }
 
@@ -311,7 +311,7 @@ h4 {
 .skills-section .hr-destaque {
     border: none;
     height: 2px;
-    background-color: #811b85;
+    background-color: #507a1f;
     /* MANTIDO: Força o alinhamento horizontal com o HR principal */
     margin: 10px 0 20px 45px; 
     width: calc(100% - 45px); 
@@ -337,7 +337,7 @@ h4 {
 
 .progress-bar {
     height: 100%;
-    background: #8349e0;
+    background: #7a9e4e;
     border-radius: 4px;
     transition: width 0.7s ease;
 }
